[package]
name = "async-metronome"
version = "0.3.0"
authors = ["Alexey Aristov <aav@acm.org>"]
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/suprematic/async-metronome"
description = "Unit testing framework for async Rust"
keywords = ["tests", "unit", "assert", "futures", "async"]
categories = [
    "development-tools",
    "development-tools::testing",
    "asynchronous",
    "concurrency",
]
readme = "README.md"

[dependencies]
async-metronome-attributes = "0.1"
futures = "0.3"
async-task = "4.7"
flume = "0.11"
pin-project = "1.1"
threadpool = "1.8"
derive_builder = "0.13"

[dev-dependencies]
async-std = "1.12"
